Working Telnyx voice integration - Pi to VPS API - before cleanup

--- a/email_config.json
+++ b/email_config.json
@@ -15,7 +15,7 @@
         "phone1": "0409991376",
         "phone2": "",
         "phone3": "",
-        "message": "phone intrusion detected. Phone intrusion phone intrusion",
+        "message": "Alarm at device 001. Alarm at device 001",
         "email1": "a.darr@hotmail.com",
         "email2": "rebelandandrew2@gmail.com",
         "email3": ""
